[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/boyScenes/boyPrincipalScreenAfterQuiz.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/girlInitialScreenSprite/withoutButtons.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/girlInitialScreenSprite/configButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/girlInitialScreenSprite/playPrincipal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/girlInitialScreenSprite/pointsPanel.png" type="Texture" id=5]
[ext_resource path="res://Scripts/girlPrincipalScreenAfterQuiz.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/design.graffiti.SNAP____.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 7 )

[node name="principalScreen" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Background" parent="." index="0"]
texture = ExtResource( 2 )

[node name="ConfigButton" parent="." index="1"]
margin_left = 119.816
margin_top = 5.56302
margin_right = 135.816
margin_bottom = 25.5631

[node name="OptionsButton" parent="ConfigButton" index="0"]
position = Vector2( 8.64883, 7.52143 )
texture = ExtResource( 3 )
offset = Vector2( -855.588, 1735.18 )

[node name="playSprite" parent="PlayButton" index="0"]
texture = ExtResource( 4 )

[node name="QuizResultMenu" parent="." index="5"]
texture = ExtResource( 5 )

[node name="MenuLabel" parent="Menu/VBoxContainer" index="0"]
margin_right = 85.0

[node name="Volume" parent="Menu/VBoxContainer" index="1"]
margin_right = 85.0

[node name="Teste" parent="Menu/VBoxContainer" index="2"]
margin_right = 85.0

[node name="Zzz" parent="Menu/VBoxContainer" index="3"]
margin_right = 85.0

[node name="BackButton" parent="Menu/VBoxContainer" index="4"]
margin_right = 85.0

[node name="totalPoints" parent="." index="7"]
margin_left = 13.1671
margin_top = 155.588
margin_right = 70.1675
margin_bottom = 172.588
custom_fonts/font = SubResource( 1 )

[node name="correctAnswers" parent="." index="8"]
margin_left = 50.966
margin_top = 174.892
margin_right = 66.966
margin_bottom = 190.892
custom_fonts/font = SubResource( 2 )

[node name="wrongAnswers" parent="." index="9"]
margin_left = 50.966
margin_top = 193.724
margin_right = 66.966
margin_bottom = 209.724
custom_fonts/font = SubResource( 3 )

[node name="insulinAmount" parent="." index="10"]
margin_left = 51.1731
margin_top = 212.836
margin_right = 67.1731
margin_bottom = 228.836
custom_fonts/font = SubResource( 4 )
[connection signal="pressed" from="PlayButton" to="." method="onPlayButtonPressed"]
